--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-distlib==0.3.7
-numpy==1.25.1
-pandas==2.0.3
-requests==2.31.0
+pickle
+pandas
+numpy
 scikit-learn==1.3.0
-scipy==1.11.1
 streamlit==1.25.0
 distutils==3.10.8-1
